--- a/src/features/StreetcodeCatalogPage/StreetcodeCatalogItem/StreetcodeCatalogItem.styles.scss
+++ b/src/features/StreetcodeCatalogPage/StreetcodeCatalogItem/StreetcodeCatalogItem.styles.scss
@@ -11,8 +11,8 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     background-size: 100%;
     background-repeat: no-repeat;
-
-    @include mut.positioned-as();
+    background-color: rgba(244, 244, 244, 0.2);
+    
     @include mut.flexed($justify-content: center, $align-items: flex-end);
     cursor: pointer;
 }
