adaptive for mobile

--- a/src/app/common/components/modals/Lightbox/LightboxComponent.styles.scss
+++ b/src/app/common/components/modals/Lightbox/LightboxComponent.styles.scss
@@ -68,18 +68,19 @@
             color: #918f8f!important;
         }
     }
+@media screen and (min-width:1024px) {
+        .yarl__navigation_prev {
+            @include slick-arrow-lightbox(left);
+            left: pxToRem(30px) !important;
+            filter: brightness(35%);
 
-    .yarl__navigation_prev {
-        @include slick-arrow-lightbox(left);
-        left: pxToRem(30px) !important;
-        filter: brightness(35%);
+        }
 
-    }
+        .yarl__navigation_next {
+            @include slick-arrow-lightbox(right);
+            right: pxToRem(30px) !important;
+            filter: brightness(35%);
 
-    .yarl__navigation_next {
-        @include slick-arrow-lightbox(right);
-        right: pxToRem(30px) !important;
-        filter: brightness(35%);
-
+        }
     }
 }
