--- a/src/features/StreetcodePage/ArtGalleryBlock/ArtGalleryBlock.styles.scss
+++ b/src/features/StreetcodePage/ArtGalleryBlock/ArtGalleryBlock.styles.scss
@@ -4,19 +4,16 @@
 @use "@sass/mixins/_wrapper.mixins.scss" as wr;
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
 
+
 .artGallerySliderContainer .sliderClass .slick-slider {
-    //height: pxToRem(560px);
     width: 100%;
 }
 
 .artGalleryWrapper {
-    //@include wr.main-page-block-wrapper();
-    //margin-bottom: pxToRem(390px);
+    @include wr.main-page-block-wrapper();
 
     .artGalleryContainer {
-        @include mut.rem-margined($top: 150px);
-        //@include mut.sized(100%, 400px);
-        //margin-bottom: pxToRem(290px);
+        @include mut.rem-margined($top: 30px);
 
         .artGalleryContentContainer {
             @include mut.flex-centered();
@@ -24,7 +21,6 @@
     }
 
     .artGallerySliderContainer {
-        //@include mut.sized(, 560px);
         width: pxToRem(1230px);
     }
 }
@@ -32,12 +28,10 @@
 @media screen and (max-width:1024px) and (min-width:768px) {
     .artGalleryWrapper {
         @include wr.main-page-block-wrapper();
-        //margin-bottom: pxToRem(390px);
 
         .artGalleryContainer {
-            @include mut.rem-margined($top: 150px);
+            @include mut.rem-margined($top: -30px,$bottom:-60px);
             @include mut.sized(92%, 100%);
-            //margin-bottom: pxToRem(290px);
 
             .artGalleryContentContainer {
                 @include mut.flex-centered();
@@ -46,44 +40,19 @@
 
         .artGallerySliderContainer {
             @include mut.sized(830px, 360px);
-            // visibility: visible;
         }
 
-        .artGallarySliderContainerSmall {
-            //visibility: hidden;
-        }
     }
 }
 
 @media screen and (max-width:767px) {
-    .artGallerySliderContainer {
-        //visibility: hidden;
-    }
-
-    .artGallarySliderContainerSmall {
-        @include mut.sized(830px, 360px);
-        //visibility: visible;
+    .artGalleryWrapper {
+        .artGalleryContainer {
+          @include mut.rem-margined($top: -20px,$bottom:-70px);
+          @include mut.sized(92%, 100%);
+            .artGalleryContentContainer {
+                @include mut.flex-centered();
+            }
+        }   
     }
 }
-//@media screen and (max-width:768px) and (min-width:480) {
-//.artGalleryWrapper {
-//    @include wr.main-page-block-wrapper();
-//margin-bottom: pxToRem(390px);
-
-//    .artGalleryContainer {
-//        @include mut.rem-margined($top: 150px);
-//       @include mut.sized(92%, 100%);
-
-//margin-bottom: pxToRem(290px);
-
-//        .artGalleryContentContainer {
-//           @include mut.flex-centered();
-//       }
-//   }
-//   .artGallerySliderContainer {
-//      @include mut.sized(830px, 360px);
-//   }
-
-
-//}
-//}
