--- a/src/features/StreetcodePage/ArtGalleryBlock/ArtGalleryBlock.styles.scss
+++ b/src/features/StreetcodePage/ArtGalleryBlock/ArtGalleryBlock.styles.scss
@@ -7,6 +7,11 @@
 
 .artGallerySliderContainer .sliderClass .slick-slider {
     width: 100%;
+
+    .slick-dots {
+        padding-right:25px;
+        margin-top:-60px;
+    }
 }
 
 .artGalleryWrapper {
