--- a/src/app/layout/footer/Footer.styles.scss
+++ b/src/app/layout/footer/Footer.styles.scss
@@ -5,7 +5,7 @@
 
 .footerContainer {
   @include mut.sized(100%, 206px);
-  @include mut.flexed($justify-content: flex-start);
+  @include mut.flexed($justify-content: center);
   background-color: c.$dark-red-color;
 }
 
@@ -15,6 +15,8 @@
 
   @include mut.colored(c.$copyright-section-color, c.$pure-white-color);
   @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 400, $font-size: 13px);
+  flex-wrap: wrap;
+  text-align: center;
 }
 
 .footerLogoContainer {
@@ -31,7 +33,7 @@
 .usefulLinksColumnContainer {
   @include mut.sized($width: 60%, $height: 100%);
   display: flex;
-
+  @include mut.flexed($justify-content: space-between);
   > .usefulLinksColumn {
     margin-top: pxToRem(29px);
     margin-right: 10%;
@@ -53,10 +55,24 @@
     margin-top: pxToRem(29px);
     color: c.$pure-white-color;
     @include mut.with-font($font-weight: 300, $font-size: 15px);
-
+    margin-right: 10%;
     > * {
       display: inline;
       margin-right: pxToRem(14.62px);
     }
+  }
+}
+@media screen and (max-width: 480px) {
+  .footerCopyright{
+    height: pxToRem(72px);
+
+  }
+}
+@media screen and (max-width: 1285px) {
+  .usefulLinksColumn{
+    margin-right: 0;
+  }
+  .socialIconContainer{
+    margin-right: 0 !important;
   }
 }
