--- a/src/features/StreetcodePage/MapBlock/Statistics/Info.styles.scss
+++ b/src/features/StreetcodePage/MapBlock/Statistics/Info.styles.scss
@@ -5,9 +5,9 @@
 
 
 .infoContainer{
-    @include mut.sized(80px,76px);
+    @include mut.sizedImportant(80px,76px);
     @include mut.positioned-as(absolute, 0, 0, 0, 105%);
-    z-index: 2;
+    z-index: 3;
     background: c.$pure-white-color;
     box-shadow: 0px 7px 11px 2px rgba(0, 0, 0, 0.25);
     border-radius: 23px;
@@ -16,6 +16,7 @@
     }
   }
   .infoButton {
+    
   background-color: transparent;
   border: none;
   color: #ff4d4f;
