--- a/src/features/AdditionalPages/PartnersPage/ModalButtons/PartnersBtnCircle/PartnersBtnCircle.styles.scss
+++ b/src/features/AdditionalPages/PartnersPage/ModalButtons/PartnersBtnCircle/PartnersBtnCircle.styles.scss
@@ -27,7 +27,6 @@
   }
 
   .partnersBtnText {
-    text-transform: capitalize;
     color: c.$accented-red-color;
     @include mut.with-font($font-size: 15px, $font-weight: 500);
   }
@@ -36,8 +35,10 @@
 @media screen and (max-width: 1024px) {
   .partnersContainer{
       .partnersBtnCircleContainer{
+        @include mut.positioned-as(fixed, $bottom: 28px, $right: 10px);
+
         .partnersBtnCircle{
-          @include mut.circular(56px);
+          @include mut.circular(50px);
           filter: drop-shadow(0px 4px 4px rgba(219, 52, 36, 0.18));
         }
         .partnersBtnText{
