Revert "Merge branch 'master' of https://github.com/ita-social-projects/StreetCode_Client"
This reverts commit 71998f59c4c7fed2580730defc6694af0d1bf7c4, reversing
changes made to 80378ad930f307c5542e13de7d6e7d00c3a54fac.

--- a/src/features/AdminPage/NewStreetcode/ArtGallery/components/ArtGallery/ArtGalleryAdminStyles.styles.scss
+++ b/src/features/AdminPage/NewStreetcode/ArtGallery/components/ArtGallery/ArtGalleryAdminStyles.styles.scss
@@ -7,7 +7,7 @@
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
 
 .artGallerySliderContainer .sliderClass .slick-slider {
-    width: 100%;
+    height: pxToRem(400px);
 }
 .artGalleryWrapperAdmin {
      @include mut.sized(100%, 230px);
