--- a/src/features/StreetcodePage/ArtGalleryBlock/ArtGalleryBlock.styles.scss
+++ b/src/features/StreetcodePage/ArtGalleryBlock/ArtGalleryBlock.styles.scss
@@ -4,60 +4,23 @@
 @use "@sass/mixins/_wrapper.mixins.scss" as wr;
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
 
-
 .artGallerySliderContainer .sliderClass .slick-slider {
-    width: 100%;
-
-    .slick-dots {
-        padding-right: 25px;
-        margin-top: -60px;
-    }
+    height: pxToRem(560px);
 }
-
 .artGalleryWrapper {
     @include wr.main-page-block-wrapper();
+    margin-bottom: pxToRem(390px);
 
     .artGalleryContainer {
-        @include mut.rem-margined($top: 30px);
+        @include mut.rem-margined($top: 150px);
+        @include mut.sized(100%, 400px);
+        margin-bottom: pxToRem(290px);
 
         .artGalleryContentContainer {
             @include mut.flex-centered();
-        }
+        }  
     }
-
     .artGallerySliderContainer {
-        width: pxToRem(1230px);
-    }
-}
-
-@media screen and (max-width:1024px) and (min-width:768px) {
-    .artGalleryWrapper {
-        @include wr.main-page-block-wrapper();
-
-        .artGalleryContainer {
-            @include mut.rem-margined($top: -30px,$bottom:-60px);
-            @include mut.sized(92%, 100%);
-
-            .artGalleryContentContainer {
-                @include mut.flex-centered();
-            }
-        }
-
-        .artGallerySliderContainer {
-            @include mut.sized(830px, 360px);
-        }
-
-    }
-}
-
-@media screen and (max-width:767px) {
-    .artGalleryWrapper {
-        .artGalleryContainer {
-          @include mut.rem-margined($top: -20px,$bottom:-70px);
-          @include mut.sized(92%, 100%);
-            .artGalleryContentContainer {
-                @include mut.flex-centered();
-            }
-        }   
+        @include mut.sized(1230px, 560px);
     }
 }
