--- a/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
+++ b/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
@@ -8,7 +8,7 @@ $moreInfo-width: 150px;
 .relatedFiguresWrapper {
     @include mut.sized($height: 600px);
     @include wr.main-page-block-wrapper();
-    @include mut.rem-margined($bottom: 50px, $top: 90px);
+    @include mut.rem-margined($bottom: 50px, $top: 170px);
 }
 
 .smallWrapper {
@@ -72,11 +72,11 @@ $moreInfo-width: 150px;
     }
 }
 
-@media screen and (max-width: 481px) {
+@media screen and (max-width: 480px) {
     .relatedFiguresWrapper {
-        @include mut.sized($height: 600px); 
-        @include mut.rem-margined($bottom: 100px, $top: 0px);
-        
+        @include mut.sized($height: 600px);
+        @include mut.rem-margined($bottom: 100px); 
+
         .slick-dots {
             bottom: 0;
             left: 7px;
@@ -94,17 +94,9 @@ $moreInfo-width: 150px;
         
     }
 }
-@media screen and (max-width: 1024px) and (min-width: 768px) {
+@media screen and (max-width: 1024px) and (min-width: 481px) {
     .relatedFiguresWrapper {
         @include mut.sized($height: 400px); 
-        @include mut.rem-margined($bottom: 150px, $top: 40px);
-    }
-}
-
-@media screen and (max-width: 767px) and (min-width: 481px) {
-    .relatedFiguresWrapper {
-        @include mut.sized($height: 400px);
-        @include mut.rem-margined($bottom: 100px, $top: 0px);
     }
 }
 
@@ -126,3 +118,4 @@ $moreInfo-width: 150px;
         color: c.$pure-white-color;
     }
 }
+
