Revert "Revert "Merge branch 'master' of https://github.com/ita-social-projects/StreetCode_Client""
This reverts commit 2c732f5799a0573daa8f2c65efae00c8e70d34ca.

--- a/src/features/AdminPage/TermDictionary/TermDictionary.styles.scss
+++ b/src/features/AdminPage/TermDictionary/TermDictionary.styles.scss
@@ -3,9 +3,11 @@
 @use "@sass/variables/_variables.colors.scss" as c;
 @use "@sass/_utils.functions.scss" as f;
 
-.wrapper {
-    display: grid;
-    grid-template-columns: 10% 90%;
+.termDictionaryCover{
+    .wrapper {
+        display: grid;
+        grid-template-columns: 10% 90%;
+    }
 }
 
 .termDictionaryContainer {
